# crewai_intro

./: .gitignore  README.md  my_flow_plot_day06.html  pyproject.toml  report2.md  report_day4.md  report_day5.md
crewai_series/day_01/: pyproject.toml
crewai_series/day_01/src/day_01/: crew.py  main.py
crewai_series/day_01/src/day_01/config/: agents.yaml  tasks.yaml
crewai_series/day_02/: README.md  pyproject.toml
crewai_series/day_02/src/day_02/: crew.py  main.py
crewai_series/day_02/src/day_02/config/: agents.yaml  tasks.yaml
crewai_series/day_03/: README.md  pyproject.toml
crewai_series/day_03/src/day_03/: crew.py  main.py
crewai_series/day_03/src/day_03/config/: tasks.yaml
crewai_series/day_04/: README.md
crewai_series/day_04/src/day_04/: crew.py  main.py
crewai_series/day_05/: README.md  pyproject.toml
crewai_series/day_05/src/day_05/: crew.py  main.py  myflow.py
crewai_series/day_05/src/day_05/config/: tasks.yaml
crewai_series/day_05/src/day_05/tools/: custom_tool.py
crewai_series/day_06/: README.md  pyproject.toml
crewai_series/day_06/src/day_06/: crew.py  file_writer_crew.py  main.py  myflow.py
crewai_series/day_06/src/day_06/config/filewriter/: tasks.yaml
crewai_series/day_06/src/day_06/tools/: custom_file_writer_tool.py
crewai_series/day_07/: README.md
crewai_series/day_07/src/day_07/: crew.py  main.py  myflow.py
crewai_series/day_07/src/day_07/config/: agents.yaml
crewai_series/day_07/src/day_07/config/filewriter/: agents.yaml
