[tool.poetry]
name = "crewai-series"
version = "0.1.0"
description = ""
authors = ["diogojfr <diogojfr1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.76.9"}
litellm = "^1.55.12"
pydantic = "^2.10.4"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
