[project]
name = "day_04"
version = "0.1.0"
description = "day_04 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
day_04 = "day_04.main:run"
run_crew = "day_04.main:run"
train = "day_04.main:train"
replay = "day_04.main:replay"
test = "day_04.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
