[project]
name = "day_05"
version = "0.1.0"
description = "day_05 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
day_05 = "day_05.main:run"
run_crew = "day_05.main:run"
train = "day_05.main:train"
replay = "day_05.main:replay"
test = "day_05.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
